fix: don't wrap links to fix broken hover effect
Resolve: #90

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -92,7 +92,7 @@
 
 /* #Links
 ================================================== */
-	a, a:visited { text-decoration: underline; outline: 0; }
+	a, a:visited { text-decoration: underline; outline: 0; white-space: nowrap; }
 	a:hover, a:focus { }
 	p a, p a:visited { line-height: inherit; }
 
